--- a/india/india5.html
+++ b/india/india5.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#india_day_13">India, Day 13</a></li></ul></div>
 
-<h1 id="india_day_13">India, Day 13</h1>
+<h1 id="india_day_13"><a href="#india_day_13" class="section-self-link">India, Day 13</a></h1>
 <p><a href="india5_28.jpg"><img src="india5_28_small.webp" alt="" class="preview" width="700" height="525"></img></a></p>
 <p>One of the unsung advantages of having acute diarrhea is the ability to use the
 little flush button instead of the big one.  As you can imagine, I've been
