--- a/russia/russia1.html
+++ b/russia/russia1.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#russia_and_czechia_day_3">Russia and Czechia, Day 3</a></li></ul></div>
 
-<h1 id="russia_and_czechia_day_3">Russia and Czechia, Day 3</h1>
+<h1 id="russia_and_czechia_day_3"><a href="#russia_and_czechia_day_3" class="section-self-link">Russia and Czechia, Day 3</a></h1>
 <p>Greetings from Motherland,</p>
 <p>Come sit, for I have much to tell you. I arrive three days before, and see
 many things. On first day, I take plane. It was big plane, but slow plane. I
