--- a/russia/russia10.html
+++ b/russia/russia10.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#russia_and_czechia_day_10">Russia and Czechia, Day 10</a></li></ul></div>
 
-<h1 id="russia_and_czechia_day_10">Russia and Czechia, Day 10</h1>
+<h1 id="russia_and_czechia_day_10"><a href="#russia_and_czechia_day_10" class="section-self-link">Russia and Czechia, Day 10</a></h1>
 <p>Here I am in the Prague airport. I gave myself a little too much wiggle room
 getting here, since I took an Uber but timed it based on the public
 transportation route. As a result I have a half hour to kill before they'll
