--- a/russia/russia2.html
+++ b/russia/russia2.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#russia_and_czechia_day_4">Russia and Czechia, Day 4</a></li></ul></div>
 
-<h1 id="russia_and_czechia_day_4">Russia and Czechia, Day 4</h1>
+<h1 id="russia_and_czechia_day_4"><a href="#russia_and_czechia_day_4" class="section-self-link">Russia and Czechia, Day 4</a></h1>
 <p>Hi Again,</p>
 <p>Yesterday was more relaxed than the previous days. After lunch here at the
 flat, Pasha and I took the metro further into the city to meet his dad,
