--- a/russia/russia7.html
+++ b/russia/russia7.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#russia_and_czechia_day_7">Russia and Czechia, Day 7</a></li></ul></div>
 
-<h1 id="russia_and_czechia_day_7">Russia and Czechia, Day 7</h1>
+<h1 id="russia_and_czechia_day_7"><a href="#russia_and_czechia_day_7" class="section-self-link">Russia and Czechia, Day 7</a></h1>
 <p>I'm sitting at the gate in the Warsaw airport, again. I can see them fueling
 the plane, and they just finished loading luggage from the cart. Hopefully
 my luggage was included.</p>
