--- a/europe/europe10.html
+++ b/europe/europe10.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#europe_day_10">Europe, Day 10</a></li></ul></div>
 
-<h1 id="europe_day_10">Europe, Day 10</h1>
+<h1 id="europe_day_10"><a href="#europe_day_10" class="section-self-link">Europe, Day 10</a></h1>
 <p>Greetings from 35,000 feet.</p>
 <p>So much for Barcelona; boy am I tired. Our last day in Madrid we went to a
 cafe; on the fourteenth floor of a hotel "Dear Hotel," (with the comma) to
