--- a/europe/europe13.html
+++ b/europe/europe13.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#europe_day_13">Europe, Day 13</a></li></ul></div>
 
-<h1 id="europe_day_13">Europe, Day 13</h1>
+<h1 id="europe_day_13"><a href="#europe_day_13" class="section-self-link">Europe, Day 13</a></h1>
 <p>I'm aboard the Arlanda Express, on my way towards a nine hour flight.
 Fortunately, in addition to being an airplane, the vessel will be also a
 time machine, so I'll arrive in New York only two hours after departing.</p>
