--- a/europe/europe2.html
+++ b/europe/europe2.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#europe_day_2">Europe, Day 2</a></li></ul></div>
 
-<h1 id="europe_day_2">Europe, Day 2</h1>
+<h1 id="europe_day_2"><a href="#europe_day_2" class="section-self-link">Europe, Day 2</a></h1>
 <p>Today's cool thing was a glacier hike. You know, hiking on a glacier. A
 fucking glacier. Strapped crampons onto our feet, helmets on our heads, and
 walked up onto hundreds of meters of solid ice as it was melting. We walked
