--- a/europe/europe8.html
+++ b/europe/europe8.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#europe_day_8">Europe, Day 8</a></li></ul></div>
 
-<h1 id="europe_day_8">Europe, Day 8</h1>
+<h1 id="europe_day_8"><a href="#europe_day_8" class="section-self-link">Europe, Day 8</a></h1>
 <p><em>[2020 note: the images get more corrupted as the post goes on.]</em></p>
 <p>Slept in a bit today. Vineet’s vibrant nasopharyngeal discharge has
 accordingly ceased.</p>
