--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#blog">Blog</a><ul><li><a href="#static">Static</a></li><li><a href="#design">Design</a></li><li><a href="#implementation">Implementation</a></li><li><a href="#who_gives_a_shit">Who Gives a Shit?</a></li></ul></li></ul></div>
 
-<h1 id="blog">Blog</h1>
+<h1 id="blog"><a href="#blog" class="section-self-link">Blog</a></h1>
 <p>The time has come for me to blog about my blog on my blog.  It's bound to
 happen eventually with any hand-coded blog.</p>
 <p>I've enjoyed the exercise, because the goal is tangible and easy to state,</p>
@@ -135,7 +141,7 @@ happen eventually with any hand-coded blog.</p>
 opportunity to learn what really goes on underneath premade offerings.</p>
 <p>What I've learned is that I'm more of a maker than an engineer, and that I
 more value what is created than why it is created.</p>
-<h2 id="static">Static</h2>
+<h2 id="static"><a href="#static" class="section-self-link">Static</a></h2>
 <p>This website is completely static.  The server doesn't generate content on
 demand, and there are no client-side scripts.  It's HTML, CSS, and media
 (images and videos).  Nothing else.</p>
@@ -148,7 +154,7 @@ off-screen tracking images.  You won't be asked to sign in with Google, connect
 to Facebook, give a thumbs up, or leave a review, and there's no way to tweet,
 repost, or add a comment.</p>
 <p>It's just HTML, CSS, and media.  My words into the void.</p>
-<h2 id="design">Design</h2>
+<h2 id="design"><a href="#design" class="section-self-link">Design</a></h2>
 <p>The configuration language of the site generator is <em>the file system</em>.</p>
 <pre><code class="lang-text hljs">.
 ├── bin
@@ -207,7 +213,7 @@ as the domain root, e.g.</p>
 </code></pre>
 <p>I deploy the site by deep copying <code>site/</code> to another directory (no more symbolic
 links), and shipping that directory to wherever the blog is hosted.</p>
-<h2 id="implementation">Implementation</h2>
+<h2 id="implementation"><a href="#implementation" class="section-self-link">Implementation</a></h2>
 <p>At first, the code generator was a single python script, <a href="https://github.com/dgoffredo/dgoffredo.github.io/blob/12b499adc0480a55c1bcd34e31ac21f8aa0cd4d0/bin/generate">bin/generate</a>.</p>
 <p>Now it's a <a href="https://github.com/dgoffredo/dgoffredo.github.io/blob/master/Makefile">Makefile</a> supported by a menagerie of <a href="https://github.com/dgoffredo/dgoffredo.github.io/tree/master/bin">scripts</a>, and as the
 final step of the build a <a href="https://github.com/dgoffredo/dgoffredo.github.io/blob/master/bin/generate">descendent of bin/generate</a> is called to
@@ -218,7 +224,7 @@ inadequately disciplined developer learning things as he went along.</p>
 <p>If I could figure out how to end up with cleaner code, documentation, and tests
 once I get to this point, I'd be a better developer.</p>
 <p>It's a journey!  Now on to the details...</p>
-<h3 id="accumulated_features">Accumulated Features</h3>
+<h3 id="accumulated_features"><a href="#accumulated_features" class="section-self-link">Accumulated Features</a></h3>
 <p>The <a href="https://github.com/dgoffredo/dgoffredo.github.io/commits/master">commit history</a> tells the story of features added.</p>
 <ul>
 <li>link to page that lists all posts</li>
@@ -244,7 +250,7 @@ intermediate files, changing how the generated site was structured and
 deployed, and packaging the build process into reproducible isolated
 environments (like Docker, Guix, and Nix).</p>
 <p>Should have just used Wordpress, right?</p>
-<h2 id="who_gives_a_shit">Who Gives a Shit?</h2>
+<h2 id="who_gives_a_shit"><a href="#who_gives_a_shit" class="section-self-link">Who Gives a Shit?</a></h2>
 <p>I'm proud enough to say what I ended up with is better and lighter than other
 generators out there, but I'm wise enough to know that isn't true.</p>
 <p>My static site generator is better than anything else out there for
