--- a/india/india1.html
+++ b/india/india1.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#india_day_1">India, Day 1</a></li></ul></div>
 
-<h1 id="india_day_1">India, Day 1</h1>
+<h1 id="india_day_1"><a href="#india_day_1" class="section-self-link">India, Day 1</a></h1>
 <p><a href="india_20.jpg"><img src="india_20_small.webp" alt="dog" class="preview" width="700" height="933"></img></a></p>
 <p>This is Aniruddha Ram Kumar Mukherjee.  He is a dog.  Like many natives of
 Delhi, Aniruddha must find ways to cope with the oppressive afternoon summer
