--- a/india/india3.html
+++ b/india/india3.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#india_day_8">India, Day 8</a></li></ul></div>
 
-<h1 id="india_day_8">India, Day 8</h1>
+<h1 id="india_day_8"><a href="#india_day_8" class="section-self-link">India, Day 8</a></h1>
 <p><a href="india3_5.jpg"><img src="india3_5_small.webp" alt="" class="preview" width="700" height="525"></img></a></p>
 <p>I promised you a cow.  You know, I won't be eating them for a while.  It's just
 not right.  Well, I might have eaten some of them today.  More on that later.</p>
