--- a/india/india6.html
+++ b/india/india6.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#india_day_15">India, Day 15</a></li></ul></div>
 
-<h1 id="india_day_15">India, Day 15</h1>
+<h1 id="india_day_15"><a href="#india_day_15" class="section-self-link">India, Day 15</a></h1>
 <p>They have Jesus in Kerala.</p>
 <p><a href="india6_66.jpg"><img src="india6_66_small.webp" alt="" class="preview" width="700" height="525"></img></a></p>
 <p>Christianity, Islam, and Hinduism simmer together in the region like mismatched
