--- a/mexico/mexico2.html
+++ b/mexico/mexico2.html
@@ -89,7 +89,13 @@ img.preview {
     width: 100%;
     height: auto
 }
-</style><style media="(orientation: landscape)">pre {
+
+/* Headers (&lt;h1&gt;, &lt;h2&gt;, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}</style><style media="(orientation: landscape)">pre {
     min-width: 700;
 }
 
@@ -125,7 +131,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <div class="table-of-contents"><ul><li><a href="#mexico_day_8">Mexico, Day 8</a></li></ul></div>
 
-<h1 id="mexico_day_8">Mexico, Day 8</h1>
+<h1 id="mexico_day_8"><a href="#mexico_day_8" class="section-self-link">Mexico, Day 8</a></h1>
 <p><a href="mexico_5.jpg"><img src="mexico_5_small.webp" alt="" class="preview" width="700" height="525"></img> </a></p>
 <p><a href="mexico_6.jpg"><img src="mexico_6_small.webp" alt="" class="preview" width="700" height="525"></img> </a></p>
 <p>I haven't done my own laundry in a while. In this arid climate, you hardly
