--- a/double-panda-ipa/index.html
+++ b/double-panda-ipa/index.html
@@ -338,7 +338,7 @@ guess is that it won't taste right until at least a month in the bottle.</p>
 
 
 
-<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Beer</div><div class="series-navigation-links"><span>Double Panda IPA</span></div></div></div>
+<div class="series-navigation-placeholder"><div class="series-navigation"><div class="series-navigation-header">Beer</div><div class="series-navigation-links"><span>Double Panda IPA</span><a href="../boxy-brown-porter/boxy-brown-porter.html">Boxy Brown Porter</a></div></div></div>
 
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
