--- a/cannabis/index.html
+++ b/cannabis/index.html
@@ -134,7 +134,7 @@ p, .navigation-bar, table.posts, ul, ol {
 <h1 id="cannabis"><a href="#cannabis" class="section-self-link">Cannabis</a></h1>
 <p>I'm trying my hand at growing weed.  <a href="https://legislation.nysenate.gov/pdf/bills/2021/s854a">It's legal in New York now</a>, so it's a
 good time to start.</p>
-<p>It's a bit late in the season to start, but if one of the plants survive, maybe
+<p>It's a bit late in the season to start, but if one of the plants survives, maybe
 I'll have some weed by the time it gets cold outside.</p>
 <p>The plants started as five seeds that I bought online, $10 each.</p>
 <p><a href="seeds.jpg"><img src="seeds_small.webp" alt="seeds" class="preview" width="700" height="525"></img></a></p>
