site build based off of commit 841f93c61603992865a89bdc2420b05bc45014e6 on master branch

--- a/boxy-brown-porter/boxy-brown-porter.html
+++ b/boxy-brown-porter/boxy-brown-porter.html
@@ -129,7 +129,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <p>Sunday, June  20, 2021</p>
 
-<div class="table-of-contents"><ul><li><a href="#boxy_brown_porter">Boxy Brown Porter</a><ul><li><a href="#ingredients">Ingredients</a></li><li><a href="#mash">Mash</a></li><li><a href="#sparge">Sparge</a></li><li><a href="#boil">Boil</a></li><li><a href="#fermentation">Fermentation</a></li></ul></li></ul></div>
+<div class="table-of-contents"><ul><li><a href="#boxy_brown_porter">Boxy Brown Porter</a><ul><li><a href="#ingredients">Ingredients</a></li><li><a href="#mash">Mash</a></li><li><a href="#sparge">Sparge</a></li><li><a href="#boil">Boil</a></li><li><a href="#fermentation">Fermentation</a></li><li><a href="#bottling_july_2_2021">Bottling (July 2, 2021)</a></li></ul></li></ul></div>
 
 <h1 id="boxy_brown_porter"><a href="#boxy_brown_porter" class="section-self-link">Boxy Brown Porter</a></h1>
 <p>Today I brewed a porter recipe from the <a href="https://www.homebrewtalk.com/threads/1880-whitbread-porter.666707/">internet</a>.  It says:</p>
@@ -214,6 +214,18 @@ then poured into the fermentor.</p>
 <li>S-04 is a beast.</li>
 </ol>
 <p>I cleaned up the mess and replaced the tube with an airlock.</p>
+<h2 id="bottling_july_2_2021"><a href="#bottling_july_2_2021" class="section-self-link">Bottling (July 2, 2021)</a></h2>
+<p><a href="filled.jpg"><img src="filled_small.webp" alt="filled beer bottles" class="preview" width="700" height="933"></img></a></p>
+<p>We got 42 bottles of porter, plus one partially filled.  Not bad, considering
+that the fermentor exploded.</p>
+<p>The hydrometer read 1.014 at 64° F, which means the <strong>final gravity was 1.014</strong>,
+which means the beer is <strong>5.0% ABV</strong>.</p>
+<p><a href="hydrometer.jpg"><img src="hydrometer_small.webp" alt="hydrometer reading" class="preview" width="700" height="933"></img></a></p>
+<p><a href="thermometer.jpg"><img src="thermometer_small.webp" alt="thermometer reading" class="preview" width="700" height="933"></img></a></p>
+<p>I primed the beer with 1¼ cups of pale dried malt extract boiled in about a
+quart of water and cooled.</p>
+<p>The beer tastes good flat.  Let's give it a few weeks to carbonate before the
+first tasting.</p>
 
 
 
