--- a/boxy-brown-porter/index.html
+++ b/boxy-brown-porter/index.html
@@ -138,13 +138,12 @@ p, .navigation-bar, table.posts, ul, ol {
 <p>It's supposedly from 1880 and is called "Whitbread Porter."  I'm going to
 call it "Boxy Brown Porter."</p>
 <p><a href="boxy.png"><img src="boxy_small.png" width="347" height="400"></img></a></p>
-<p></p>
 <style>
-td {
+table.brewing td, table.brewing th {
     padding: 0 15px;
 }
 </style><h2 id="ingredients"><a href="#ingredients" class="section-self-link">Ingredients</a></h2>
-<table>
+<table class="brewing">
   <tr><th>Grain</th><th>Quantity</th><th>Notes</th></tr>
   <tr><td>Pale 2-Row</td><td>9 lbs.</td><td></td></tr>
   <tr><td>Brown Malt</td><td>1 lb. 12 oz.</td><td></td></tr>
@@ -157,7 +156,7 @@ td {
   <tr><td>Safale S-04</td><td>1 pack dry</td><td>stirred into some wort and pitched</td></tr>
 </table><h2 id="mash"><a href="#mash" class="section-self-link">Mash</a></h2>
 <p>Here's what the <a href="http://www.homebrewing.com/calculators/?page=tools&amp;section=strike&amp;action=calculate">strike water temperature calculator</a> had to say:</p>
-<table>
+<table class="brewing">
   <tr><td>Grain Weight</td><td>11.5 pounds</td></tr>
   <tr><td>Grain Temperature</td><td>82° F</td></tr>
   <tr><td>Strike Water Amount</td><td>4 gallons</td></tr>
