--- a/double-panda-ipa/index.html
+++ b/double-panda-ipa/index.html
@@ -135,7 +135,7 @@ p, .navigation-bar, table.posts, ul, ol {
 <p><a href="label.png"><img src="label.webp" alt="Double Panda IPA beer label" width="384" height="500"></img></a></p>
 <p></p>
 <style>
-td {
+table.brewing td, table.brewing th {
     padding: 0 15px;
 }
 </style><p>I'm making a beer for the first time since the end of 2017, so I thought I'd
@@ -145,7 +145,7 @@ blog about it.  This will be the first post in a "beer" series.</p>
 <p>I made a big <a href="https://en.wikipedia.org/wiki/India_pale_ale">IPA</a> based on the ingredients I had on hand.  They're all <em>old</em>
 ingredients, which might have been problematic, but I think I'll get a solid
 beer out of it anyway.</p>
-<table>
+<table class="brewing">
   <tr><th>Grain</th><th>Quantity</th><th>Notes</th></tr>
   <tr><td>American 2-Row</td><td>≈14 lbs.</td><td>might have been more</td></tr>
   <tr><td>American Pilsner</td><td>2 lbs.</td><td></td></tr>
@@ -205,7 +205,7 @@ in a nerdy hobby, it fits.</p>
 <p>I adjust the flow rate both into and out of the lauter tun based on the level
 of water above the mash as indicated by sharpie markings on the inside of the
 cooler.</p>
-<table>
+<table class="brewing">
   <tr><th>Time</th><th>Level</th><th>Notes</th></tr>
   <tr><td>4:06 PM</td><td>16 cm</td><td>runnings at 27<a href="https://en.wikipedia.org/wiki/Brix">°Bx</a> ≈ 1.115 <a href="https://en.wikipedia.org/wiki/Relative_density">SG</a></td></tr>
   <tr><td>4:14 PM</td><td>17 cm</td><td>let's speed up the flow a bit</td></tr>
@@ -239,7 +239,7 @@ wanted to increase the <a href="https://en.wikipedia.org/wiki/Beer_measurement#B
 only had one ounce of Belma total.  So, I added an additional ⅓ ounce of each
 of the centennial, citra, and cascade hops to the 15 minute addition.</p>
 <p>The actual hop schedule was the following:</p>
-<table>
+<table class="brewing">
   <tr><th>Hop/Quantity</th><th>Boil Time</th></tr>
   <tr><td>½ oz. Citra, ½ oz. Centennial, ½ oz. Cascade, ½ oz. Belma</td><td>60 min.</td></tr>
   <tr><td><sup>7</sup>/<sub>12</sub> oz. Citra, <sup>7</sup>/<sub>12</sub> oz. Centennial, <sup>7</sup>/<sub>12</sub> oz. Cascade, ¼ oz. Belma</td><td>15 min.</td></tr>
