--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ p, .navigation-bar, table.posts, ul, ol {
 
 <p>Wednesday, June  30, 2021</p>
 
-<div class="table-of-contents"><ul><li><a href="#cannabis">Cannabis</a></li></ul></div>
+<div class="table-of-contents"><ul><li><a href="#cannabis">Cannabis</a><ul><li><a href="#costs">Costs</a></li></ul></li></ul></div>
 
 <h1 id="cannabis"><a href="#cannabis" class="section-self-link">Cannabis</a></h1>
 <p>I'm trying my hand at growing weed.  <a href="https://legislation.nysenate.gov/pdf/bills/2021/s854a">It's legal in New York now</a>, so it's a
@@ -166,7 +166,27 @@ water the plants.</p>
 <p>Here's the new couch.</p>
 <p><a href="couch.jpg"><img src="couch_small.webp" alt="new couch" class="preview" width="700" height="525"></img></a></p>
 <p>I'll update this post when the plants have grown more.</p>
-
+<h2 id="costs"><a href="#costs" class="section-self-link">Costs</a></h2>
+<p>Here's a table of what I've spent, so far, on this project:</p>
+<p></p>
+<p><style>
+table.costs td:nth-child(2), table.costs td:nth-child(3), table.costs td:nth-child(4), td.total
+{
+  text-align: right;
+}
+table.costs td, table.costs th {
+    padding: 0 15px;
+}
+</style></p>
+<table class="costs">
+  <tr><th>Item</th><th>Unit Cost</th><th>Quantity</th><th>Subtotal</th></tr>
+  <tr><td>seeds</td><td>$10</td><td>5</td><td>$50</td></tr>
+  <tr><td>buckets</td><td>$6</td><td>5</td><td>$30</td></tr>
+  <tr><td>soil</td><td>$25</td><td>2</td><td>$50</td></tr>
+  <tr><td>jars</td><td>$7</td><td>3</td><td>$21</td></tr>
+  <tr><th colspan="4"></th></tr>
+  <tr><td colspan="3">total</td><td class="total">$151</td></tr>
+</table>
 
 
 <div class="series-navigation-placeholder"></div>
